; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/extr_ff-memless.c_ml_ff_set_gain.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/extr_ff-memless.c_ml_ff_set_gain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.ml_device* }
%struct.ml_device = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i32 }

@FF_MEMLESS_EFFECTS = common dso_local global i32 0, align 4
@FF_EFFECT_PLAYING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_dev*, i32)* @ml_ff_set_gain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ml_ff_set_gain(%struct.input_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.input_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ml_device*, align 8
  %6 = alloca i32, align 4
  store %struct.input_dev* %0, %struct.input_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.input_dev*, %struct.input_dev** %3, align 8
  %8 = getelementptr inbounds %struct.input_dev, %struct.input_dev* %7, i32 0, i32 0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load %struct.ml_device*, %struct.ml_device** %10, align 8
  store %struct.ml_device* %11, %struct.ml_device** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.ml_device*, %struct.ml_device** %5, align 8
  %14 = getelementptr inbounds %struct.ml_device, %struct.ml_device* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 8
  store i32 0, i32* %6, align 4
  br label %15

15:                                               ; preds = %29, %2
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @FF_MEMLESS_EFFECTS, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %32

19:                                               ; preds = %15
  %20 = load i32, i32* @FF_EFFECT_PLAYING, align 4
  %21 = load %struct.ml_device*, %struct.ml_device** %5, align 8
  %22 = getelementptr inbounds %struct.ml_device, %struct.ml_device* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = load i32, i32* %6, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i64 %25
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = call i32 @__clear_bit(i32 %20, i32* %27)
  br label %29

29:                                               ; preds = %19
  %30 = load i32, i32* %6, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %6, align 4
  br label %15

32:                                               ; preds = %15
  %33 = load %struct.ml_device*, %struct.ml_device** %5, align 8
  %34 = call i32 @ml_play_effects(%struct.ml_device* %33)
  ret void
}

declare dso_local i32 @__clear_bit(i32, i32*) #1

declare dso_local i32 @ml_play_effects(%struct.ml_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
